<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_horizontal"
    android:background="@drawable/bg_dialog_round"
    android:orientation="vertical">

    <cn.lightink.reader.widget.BoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_vertical"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/book_delete_title"
        android:textColor="@color/colorTitle"
        android:textSize="16sp" />

    <cn.lightink.reader.widget.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/book_delete_content"
        android:textColor="@color/colorContent" />

    <CheckBox
        android:id="@+id/mBookDeleteCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:button="@drawable/ic_check"
        android:buttonTint="@color/colorContent"
        android:checked="true"
        android:gravity="center"
        android:paddingStart="@dimen/padding_vertical"
        android:paddingEnd="@dimen/padding_horizontal"
        android:text="@string/book_delete_check"
        android:textColor="@color/colorContent"
        android:textSize="13sp" />

    <cn.lightink.reader.widget.BoldTextView
        android:id="@+id/mBookDeleteSubmit"
        style="@style/Lightink.Button.Round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/sure" />

</LinearLayout>